--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,20 +1,48 @@
 .App {
-  padding: 2rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.App form {
+  width: fit-content;
+  margin-inline: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .App textarea {
   height: 100px;
   width: 500px;
+  padding: 0.25rem;
+}
+
+.App button {
+  background-color: black;
+  border-radius: 0.25rem;
+  padding: 0.25rem 0.5rem;
+
+  color: white;
+  font-size: 1rem;
 }
 
 .App ul {
-  margin-block: 1rem;
+  /* margin-block: 1rem; */
+  /* background-color: lightgreen; */
+  /* border: 1px solid black; */
+  /* padding: 1rem; */
 }
 
 .App li {
+  background-color: hsl(0, 0%, 95%);
+  border: 1px solid black;
   width: 8rem;
+  margin-block: 0.25rem;
+  padding: 0.25rem;
   min-width: fit-content;
   display: flex;
   justify-content: space-between;
