--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: hsl(100, 0%, 75%);
 }
 
 code {
