--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,7 +8,8 @@
 
 .App form {
   width: fit-content;
-  max-width: 90%;
+  width: 90%;
+  max-width: 30rem;
   margin-inline: auto;
   display: flex;
   flex-direction: column;
@@ -19,28 +20,60 @@
 .App textarea {
   height: 10rem;
   width: 20rem;
-  max-width: 100%;
-
   padding: 0.25rem;
 }
 
 .App button {
-  background-color: black;
+  background-color: hsl(0, 0%, 0%, 0.85);
   border-radius: 0.25rem;
   padding: 0.25rem 0.5rem;
 
-  color: white;
+  color: hsl(0, 0%, 100%);
   font-size: 1rem;
+}
+
+.App ul {
+  position: relative;
 }
 
 .App li {
   background-color: hsl(0, 0%, 95%);
-  border: 1px solid black;
-  width: 8rem;
+  border: 1px solid hsl(0, 0%, 0%);
+  width: 10rem;
   margin-block: 0.25rem;
   padding: 0.25rem;
   min-width: fit-content;
   display: flex;
   justify-content: space-between;
   text-align: right;
+}
+
+.App li:nth-child(1),
+.App li:nth-child(2),
+.App li:nth-child(3) {
+  font-weight: bold;
+}
+
+.App li:nth-child(1)::before {
+  position: absolute;
+  content: '1st place';
+  left: -50%;
+}
+
+.App li:nth-child(2)::before {
+  position: absolute;
+  content: '2nd place';
+  left: -55%;
+}
+
+.App li:nth-child(3)::before {
+  position: absolute;
+  content: '3nd place';
+  left: -55%;
+}
+
+@media (min-width: 500px) {
+  .App textarea {
+    width: 30rem;
+  }
 }
